fix: wrong color hex

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -154,7 +154,7 @@
             .topic-body {
                 box-shadow: 0 2px 5px rgba(0,0,0,0.08);
                 border-top: #ffa300 2px solid;
-                border: #5252522e 1px solid;
+                border: #525252 1px solid;
                 margin-bottom: 1rem;
                 margin-left: 1rem;
                 padding-right: 1rem;
